# solicite-app

./: index.html  package.json  pnpm-lock.yaml  vite.config.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/excel/: 2025分类占比.xlsx  2025省份数据统计表.xlsx
src-tauri/assets/json/: classify.json  resources.json
src-tauri/assets/yml/: config.yaml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  setup.rs
src-tauri/src/config/: config.rs  es.rs  mod.rs
src-tauri/src/domain/: classify.rs  event.rs  excel_req.rs  mod.rs  request_wrapper.rs
src-tauri/src/error/: common.rs  error.rs  excel.rs  file.rs  mod.rs
src-tauri/src/repository/: es_repository.rs  mod.rs
src-tauri/src/service/: data.rs  excel.rs  mod.rs  solicite.rs  tauri.rs
src-tauri/src/utils/: date.rs  file.rs  mod.rs  text.rs
src/components/CodeEditor/: index.vue
src/components/Drawer/: index.vue
src/components/Form/: index.vue
src/css/: styles.css
